@@ -3,6 +3,7 @@
 1. Only list players that are connected.
 2. Add 'Play album starting at track' item to track context menus. Only if
    parent is an album, and track is not 1st track.
+3. Respect genre/artist filtering when adding albums/artists to queue.
 
 0.1.0
 -----
